milvus-ocp/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: milvus
  labels:
    app.kubernetes.io/part-of: milvus
